working on version 2 concepts... need more details then tomorrow work on the trajectory and color retrieval results

--- a/3framework-overview.tex
+++ b/3framework-overview.tex
@@ -69,6 +69,7 @@ e[k] = x_Q[k] - x[k]
 In order to expound on the quantization process, a mathematical model of this process can be formulated as such. Consider a continuous signal $x[k]$ whose quantized signal, $x_Q[k]$, is desired. The functions $f (\mspace{3mu} \cdot  \mspace{3mu})$ \& $g (\mspace{3mu} \cdot  \mspace{3mu})$ can be thought of as a real-value mapping function while the $\lfloor \mspace{3mu} \cdot  \mspace{3mu} \rfloor$ represents a rounding function. As previously mention, this process is considered irreversible with prior knowledge of the loss, in this case, the quantization error, $e[k]$, can be computed using the Equation \ref{eq:quantizationerror}. 
 
 \subsection{Distance Measure}
+\label{section:distancemeasures}
 
 The use of distance metrics is another reoccurring key concept in the proposed method. While distance measure is commonly used in computer science as well as the mathematics field, there are numerous metrics suggested by different authors which are applicable and useful in different scenarios.   
 
